--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "btc-folio",
-  "version": "0.0.1",
+  "version": "0.0.7",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.2.3"
-    , "jade": "*"
+    "express": "3.2.3",
+    "jade": "*"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-cssmin": "~0.6.0"
   },
   "engines": {
     "node": "0.10.x",
