--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.2.3"
     , "jade": "*"
+    , "blockchain.info" : "1.3.1"
   },
   "engines": {
     "node": "0.10.x",
