--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "grunt-contrib-cssmin": "~0.6.0"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.1.x"
+    "node": "6.11.2"
   }
 }
